# L_systems

./: CMakeLists.txt  l_system.blend
out_no_skips/: fittest_genome.txt
out_skips/: fittest_body.txt  fittest_genome.txt
src/: environment.cpp  environment.h  forest.cpp  forest.h  genome.cpp  genome.h  main.cpp  model.cpp  model.h  organism.cpp  organism.h  parameters.h  params.h  plant.cpp  plant.h  pos.h  tree.cpp  tree.h  utility.cpp  utility.h
